add graceful
