# internal/app/adapters/primary/http-adapter/controller/methods.go
@@ -1,0 +1,31 @@
+package controller
+
+import "net/http"
+
+func (ctr *Controller) GetCustomerOrderHistory(w http.ResponseWriter, r *http.Request, customerId int) {
+	return
+}
+
+func (ctr *Controller) GetDishesWithIngredients(w http.ResponseWriter, r *http.Request) {
+	return
+}
+
+func (ctr *Controller) SearchDishesByIngredients(w http.ResponseWriter, r *http.Request) {
+	return
+}
+
+func (ctr *Controller) GetEmployeeOrderCount(w http.ResponseWriter, r *http.Request) {
+	return
+}
+
+func (ctr *Controller) GetExpiringProducts(w http.ResponseWriter, r *http.Request) {
+	return
+}
+
+func (ctr *Controller) GetSuppliersForProduct(w http.ResponseWriter, r *http.Request, productName int) {
+	return
+}
+
+func (ctr *Controller) DownloadReport(w http.ResponseWriter, r *http.Request) {
+	return
+}
